--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -91,6 +91,25 @@ Means: Competing at the same “layer” as DPDK / netmap
  - Via eBPF: makes early network stack *run-time programmable*
  - Cooperates with the kernel stack
 
+* Slide: testing code example                                        :export:
+
+#+REVEAL_PLUGINS: (highlight)
+
+#+BEGIN_SRC C
+/* Must be called in process context */
+void netif_napi_del(struct napi_struct *napi)
+{
+	might_sleep();
+	if (napi_hash_del(napi))
+		synchronize_net();
+	list_del_init(&napi->dev_list);
+	napi_free_frags(napi);
+
+	flush_gro_hash(napi);
+	napi->gro_bitmask = 0;
+}
+EXPORT_SYMBOL(netif_napi_del);
+#+END_SRC
 
 * Emacs local variables                                            :noexport:
 
