--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -6,6 +6,8 @@
 #+REVEAL_TRANS: linear
 #+REVEAL_MARGIN: 0
 #+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom.js'}
+#+REVEAL_PLUGINS: (highlight)
+//#+REVEAL_HIGHLIGHT_CSS: ./reveal.js/css/dracula.css
 #+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil
 #+OPTIONS: reveal_width:1600 reveal_height:900
 #+OPTIONS: ^:nil tags:nil toc:nil num:nil ':t
@@ -93,8 +95,6 @@ Means: Competing at the same “layer” as DPDK / netmap
 
 * Slide: testing code example                                        :export:
 
-#+REVEAL_PLUGINS: (highlight)
-
 #+BEGIN_SRC C
 /* Must be called in process context */
 void netif_napi_del(struct napi_struct *napi)
@@ -110,6 +110,23 @@ void netif_napi_del(struct napi_struct *napi)
 }
 EXPORT_SYMBOL(netif_napi_del);
 #+END_SRC
+
+
+* Org-mode hints                                                   :noexport:
+
+https://orgmode.org/manual/Easy-templates.html#Easy-templates
+
+#+BEGIN_EXAMPLE
+<s TAB expands to a ‘src’ code block.
+
+Others expansions:
+<s	#+BEGIN_SRC ... #+END_SRC
+<e	#+BEGIN_EXAMPLE ... #+END_EXAMPLE
+<q	#+BEGIN_QUOTE ... #+END_QUOTE
+<v	#+BEGIN_VERSE ... #+END_VERSE
+<c	#+BEGIN_CENTER ... #+END_CENTER
+<C	#+BEGIN_COMMENT ... #+END_COMMENT
+#+END_EXAMPLE
 
 * Emacs local variables                                            :noexport:
 
