--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -7,7 +7,7 @@
 #+REVEAL_MARGIN: 0
 #+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom.js'}
 #+REVEAL_PLUGINS: (highlight)
-//#+REVEAL_HIGHLIGHT_CSS: ./reveal.js/css/dracula.css
+#+REVEAL_HIGHLIGHT_CSS: ./reveal.js/css/dracula.css
 #+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil
 #+OPTIONS: reveal_width:1600 reveal_height:900
 #+OPTIONS: ^:nil tags:nil toc:nil num:nil ':t
