--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -7,10 +7,12 @@
 #+REVEAL_MARGIN: 0
 #+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom.js'}
 #+REVEAL_PLUGINS: (highlight)
-#+REVEAL_HIGHLIGHT_CSS: ./reveal.js/css/dracula.css
+#+REVEAL_HIGHLIGHT_CSS: /home/hawk/git/highlight.js/src/styles/atom-one-dark.css
 #+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil
 #+OPTIONS: reveal_width:1600 reveal_height:900
 #+OPTIONS: ^:nil tags:nil toc:nil num:nil ':t
+
+///+REVEAL_HIGHLIGHT_CSS: ./reveal.js/css/github.css
 
 * Intro to document                                                :noexport:
 
@@ -67,9 +69,44 @@ often split between eBPF-code running kernel side and userspace
 control plane. The control plane API not predefined, and is up to the
 programmer, through userspace manipulating shared eBPF maps.
 
+
+* Overall plan
+
+Intro XDP
+
+Deep dive into the code behind XDP
+- 
+
+
+
+
+
 * Below sections are presentation slides                           :noexport:
 
 Section below with :export: tags are the slides.
+
+
+* Slide: Driver XDP RX-handler (napi_poll)                           :export:
+
+#+BEGIN_SRC C
+while (desc_in_rx_ring && budget_left--) {
+	action = bpf_prog_run_xdp(xdp_prog, xdp_buff);
+	/* helper bpf_redirect_map have set map (and index) via this_cpu_ptr */
+	switch (action) {
+	case XDP_PASS:
+		break;
+	case XDP_TX:
+		res = driver_local_xmit_xdp_ring(adapter, xdp_buff); break;
+	case XDP_REDIRECT:
+		res = xdp_do_redirect(netdev, xdp_buff, xdp_prog); break;
+	default:           bpf_warn_invalid_xdp_action(action); /* fallthrough */
+	case XDP_ABORTED:  trace_xdp_exception(netdev, xdp_prog, action); /* fallthrough */
+	case XDP_DROP:     res = DRV_XDP_CONSUMED; break;
+	} /* left out acting on res */
+} /* End of NAPI-poll */
+xdp_do_flush_map(); /* Bulk chosen by map, can store xdf_frame for flushing */
+driver_local_XDP_TX_flush();
+#+END_SRC
 
 
 * Slide: What will you learn?                                        :export:
@@ -93,6 +130,7 @@ Means: Competing at the same “layer” as DPDK / netmap
  - Via eBPF: makes early network stack *run-time programmable*
  - Cooperates with the kernel stack
 
+
 * Slide: testing code example                                        :export:
 
 #+BEGIN_SRC C
@@ -108,9 +146,18 @@ void netif_napi_del(struct napi_struct *napi)
 	flush_gro_hash(napi);
 	napi->gro_bitmask = 0;
 }
+
+int i = 42;
+
+if (i == 42)
+	printf("universe");
+/* Why do reveal.js in HTML export limit size of code-box? */
 EXPORT_SYMBOL(netif_napi_del);
 #+END_SRC
 
+Bbla bla
+- Bullet
+- Anotherg bullet
 
 * Org-mode hints                                                   :noexport:
 
