--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -7,7 +7,8 @@
 #+REVEAL_MARGIN: 0
 #+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom.js'}
 #+REVEAL_PLUGINS: (highlight)
-#+REVEAL_HIGHLIGHT_CSS: /home/hawk/git/highlight.js/src/styles/atom-one-dark.css
+#+REVEAL_HIGHLIGHT_CSS: /home/hawk/git/highlight.js/src/styles/solarized-dark.css
+# atom-one-dark.css
 #+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil
 #+OPTIONS: reveal_width:1600 reveal_height:900
 #+OPTIONS: ^:nil tags:nil toc:nil num:nil ':t
@@ -72,10 +73,24 @@ programmer, through userspace manipulating shared eBPF maps.
 
 * Overall plan
 
-Intro XDP
+Introdution to XDP
+ - Single slide intro: What is XDP
+ - XDP design goals
 
 Deep dive into the code behind XDP
-- 
+ - What are the basic building blocks?
+ - What is required by XDP drivers?
+   - RX napi_poll changes
+   - Restrictions on memory model
+   - New pluggable memory models per RX queue
+
+How is this connected
+ - data vs control plane
+
+Coding XDP programs
+ - 
+
+
 
 
 
@@ -84,6 +99,51 @@ Deep dive into the code behind XDP
 * Below sections are presentation slides                           :noexport:
 
 Section below with :export: tags are the slides.
+
+
+* Slide: XDP restricted-C code example                               :export:
+
+#+BEGIN_SRC C
+SEC("xdp1") /* Marks first eBPF program section in ELF-binary */
+int xdp_prog_drop_all_UDP(struct xdp_md *ctx) /* Name visible with bpftool */
+{
+	void *data_end = (void *)(long)ctx->data_end; void *data = (void *)(long)ctx->data;
+	struct ethhdr *eth = data; u64 nh_off; u32 ipproto = 0;
+
+	nh_off = sizeof(*eth); /* ETH_HLEN == 14 */
+	if (data + nh_off > data_end) /* <-- Verifier use this boundry check */
+		return XDP_ABORTED;
+
+	if (eth->h_proto == htons(ETH_P_IP))
+		ipproto = parse_ipv4(data, nh_off, data_end);
+	if (ipproto == IPPROTO_UDP)
+		return XDP_DROP;
+	return XDP_PASS;
+}
+#+END_SRC
+
+Simple XDP program that drop all IPv4 UDP packets
+- Use =struct ethhdr= to access =eth->h_proto=
+- Helper for =parse_ipv4= (next slide)
+
+* Slide: Simple helper to read iph->protocol                         :export:
+
+#+BEGIN_SRC C
+static __always_inline
+int parse_ipv4(void *data, u64 nh_off, void *data_end)
+{
+	struct iphdr *iph = data + nh_off;
+
+	/* Note + 1 on pointer advance one iphdr struct size */
+	if (iph + 1 > data_end) /* <-- Again verifier check our boundry checks */
+		return 0;
+	return iph->protocol;
+}
+#+END_SRC
+
+Simple helper =parse_ipv4= used in previous example
+- Needs inlining as BPF bytes code doesn't have function calls
+- Again remember boundry checks, else verifier reject program
 
 
 * Slide: Driver XDP RX-handler (napi_poll)                           :export:
