--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -5,7 +5,7 @@
 #+REVEAL_THEME: redhat
 #+REVEAL_TRANS: linear
 #+REVEAL_MARGIN: 0
-#+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom-xdp-tutorial.js'}
+#+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom.js'}
 #+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil
 #+OPTIONS: reveal_width:1600 reveal_height:900
 #+OPTIONS: ^:nil tags:nil toc:nil num:nil ':t
@@ -407,7 +407,7 @@ userspace.  AF_XDP goes the other way, and let userspace (pre) alloc.
    On the TX-side AF_XDP does have a syscall, but userspace can fill
    several TX buffers into TX ring before calling the sendmsg syscall.
 
-* Slide: AF_XDP: Zero-copy to userspace                       :export:
+* Slide: AF_XDP: Zero-copy to userspace                              :export:
 
 /Regular XDP/ performance benefit comes from /in-kernel/ processing
 
