--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -5,7 +5,7 @@
 #+REVEAL_THEME: redhat
 #+REVEAL_TRANS: linear
 #+REVEAL_MARGIN: 0
-#+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom.js'}
+#+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom-xdp-tutorial.js'}
 #+REVEAL_PLUGINS: (highlight)
 #+REVEAL_HIGHLIGHT_CSS: /home/hawk/git/highlight.js/src/styles/solarized-dark.css
 # atom-one-dark.css
