--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -6,6 +6,7 @@
 #+REVEAL_TRANS: linear
 #+REVEAL_MARGIN: 0
 #+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom-xdp-tutorial.js'}
+#+REVEAL_EXTRA_CSS: ./reveal.js/css/custom-xdp-tutorial.css
 #+REVEAL_PLUGINS: (highlight)
 #+REVEAL_HIGHLIGHT_CSS: /home/hawk/git/highlight.js/src/styles/solarized-dark.css
 # atom-one-dark.css
