Add CSS style for highlight.js style solarized-dark.css
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -8,13 +8,11 @@
 #+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom-xdp-tutorial.js'}
 #+REVEAL_EXTRA_CSS: ./reveal.js/css/custom-xdp-tutorial.css
 #+REVEAL_PLUGINS: (highlight)
-#+REVEAL_HIGHLIGHT_CSS: /home/hawk/git/highlight.js/src/styles/solarized-dark.css
+#+REVEAL_HIGHLIGHT_CSS: ./reveal.js/css/highlight/solarized-dark.css
 # atom-one-dark.css
 #+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil
 #+OPTIONS: reveal_width:1600 reveal_height:900
 #+OPTIONS: ^:nil tags:nil toc:nil num:nil ':t
-
-///+REVEAL_HIGHLIGHT_CSS: ./reveal.js/css/github.css
 
 * Intro to document                                                :noexport:
 
