--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -154,17 +154,17 @@ while (desc_in_rx_ring && budget_left--) {
 	action = bpf_prog_run_xdp(xdp_prog, xdp_buff);
 	/* helper bpf_redirect_map have set map (and index) via this_cpu_ptr */
 	switch (action) {
-	case XDP_PASS:		break;
-	case XDP_TX:
-		res = driver_local_xmit_xdp_ring(adapter, xdp_buff); break;
-	case XDP_REDIRECT:
-		res = xdp_do_redirect(netdev, xdp_buff, xdp_prog); break;
-	default:           bpf_warn_invalid_xdp_action(action);		  /* fallthrough */
-	case XDP_ABORTED:  trace_xdp_exception(netdev, xdp_prog, action); /* fallthrough */
-	case XDP_DROP:     res = DRV_XDP_CONSUMED; break;
+	 case XDP_PASS:		break;
+	 case XDP_TX:		res = driver_local_xmit_xdp_ring(adapter, xdp_buff); break;
+	 case XDP_REDIRECT:	res = xdp_do_redirect(netdev, xdp_buff, xdp_prog);   break;
+				/*via xdp_do_redirect_map() pickup map info from helper */
+	 default:		bpf_warn_invalid_xdp_action(action);		/* fallthrough */
+	 case XDP_ABORTED:	trace_xdp_exception(netdev, xdp_prog, action);  /* fallthrough */
+	 case XDP_DROP:     res = DRV_XDP_CONSUMED; break;
 	} /* left out acting on res */
-} /* End of NAPI-poll */
-xdp_do_flush_map(); /* Bulk chosen by map, can store xdf_frame for flushing */
+}
+/* End of napi_poll call do: */
+xdp_do_flush_map(); /* Bulk size chosen by map, can store xdp_frame's for flushing */
 driver_local_XDP_TX_flush();
 #+END_SRC
 
