--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -172,6 +172,19 @@ IP routing good example:
 #+HTML: <p><br></p>
 *Encourage adding helpers instead of duplicating data in BPF maps*
 
+** Design: XDP: data-plane and control-plane                         :export:
+
+*Data-plane*: inside /kernel/, split into:
+ - Kernel-core: Fabric in charge of moving packets quickly
+ - In-kernel BPF program:
+   * Policy logic decide action
+   * Read/write access to packet
+
+*Control-plane*: /Userspace/
+ - Userspace load BPF program
+ - Can control program via changing BPF maps
+ - Everything goes through bpf system call
+
 
 * XDP relationship with eBPF                                         :export:
 :PROPERTIES:
@@ -189,7 +202,7 @@ BPF byte-code (and map-creation) all go-through bpf-syscall
    - BCC compiles each time program runs
    - libbpf approach loads ELF-object created by LLVM/clang
 
-** Slide: Code examples in this talk
+** Slide: Code examples in this talk                                 :export:
 
 This talk focus on: (approach as in kernel samples/bpf)
  - Writing *restricted-C* code in foo_kern.c
@@ -197,6 +210,7 @@ This talk focus on: (approach as in kernel samples/bpf)
  - Compile to ELF object file foo_kern.o
  - Load via libbpf (kernel tools/lib/bpf) as XDP *data-plane*
  - Have *userspace control-plane* program foo_user.c via shared BPF-maps
+
 
 * Coding XDP programs                                                :export:
 :PROPERTIES:
