Mention bulking in slide: Driver XDP RX-handler (called by napi_poll)
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -302,6 +302,7 @@ xdp_do_flush_map(); /* Bulk size chosen by map, can store xdp_frame's for flushi
 driver_local_XDP_TX_flush();
 #+END_SRC
 
+Bulk via: helper *bpf_redirect_map* + /xdp_do_redirect/ + /xdp_do_flush_map/
 
 * Org-mode hints                                                   :noexport:
 
