Avoid using term "helper" for function call in XDP code
The term " helper" is used elsewere meaning BPF-helper calls,
lets not confuse the use of this term.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -283,7 +283,7 @@ Simple XDP program that drop all IPv4 UDP packets
 - Use /struct ethhdr/ to access /eth->h_proto/
 - Helper for *parse_ipv4* (next slide)
 
-** Slide: Simple helper to read iph->protocol                        :export:
+** Slide: Simple function call to read iph->protocol                 :export:
 
 #+BEGIN_SRC C
 static __always_inline
@@ -298,7 +298,7 @@ int parse_ipv4(void *data, u64 nh_off, void *data_end)
 }
 #+END_SRC
 
-Simple helper /parse_ipv4/ used in previous example
+Simple function call /parse_ipv4/ used in previous example
 - *Needs inlining* as BPF bytes code doesn't have function calls
 - Again *remember boundry checks*, else verifier reject program
 
