Missed rename for: Helper -> Function call for parse_ipv4
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-tutorial.org
@@ -281,7 +281,7 @@ int xdp_prog_drop_all_UDP(struct xdp_md *ctx) /* Name visible with bpftool */
 
 Simple XDP program that drop all IPv4 UDP packets
 - Use /struct ethhdr/ to access /eth->h_proto/
-- Helper for *parse_ipv4* (next slide)
+- Function call for *parse_ipv4* (next slide)
 
 ** Slide: Simple function call to read iph->protocol                 :export:
 
